# fast-api-example

./: Dockerfile  FastAPI Example.postman_collection.json  README.md  docker-compose.yml  pyproject.toml  pytest.ini
apps/: entrypoint.py
apps/api/: __init__.py  app.py  config.py  context.py  entrypoint.py
apps/api/adapters/: book_repository.py
apps/api/domain/: model.py
apps/api/routes/: auth.py  book.py  default.py
apps/api/routes/specs/: book_get.yml
apps/api/service_layer/: handlers.py  unit_of_work.py
tests/: conftest.py
tests/e2e/: test_api.py
tests/unit/: test_book.py
