[tool.poetry]
name = "fast-api-example"
version = "0.1.0"
description = ""
authors = ["Bobby Drake <info@drakemultimedia.com>"]

[tool.poetry.dependencies]
python = "3.8.5"
fastapi = "^0.61.1"
uvicorn = "^0.11.8"

[tool.poetry.dev-dependencies]
rope = "^0.17.0"
pytest-dotenv = "^0.5.2"
sqlalchemy = "^1.3.19"
pytest = "^6.0.1"
black = "^20.8b1"
pdbpp = "^0.10.2"
pytest-cov = "^2.10.1"
pytest-sugar = "^0.9.4"
flake8 = "^3.8.3"
pylint = "^2.6.0"
requests = "^2.24.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
